// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть двигатели из engineTypes для марки BMW 1`] = `
Array [
  Object {
    "crossLinkText": "BMW с бензиновым двигателем",
    "engine": "GASOLINE",
    "engineRus": "бензиновым",
    "key": "AUDI_GASOLINE",
    "params": Object {
      "engine_group": Array [
        "GASOLINE",
      ],
    },
    "renderAtFooter": true,
    "value": "GASOLINE",
  },
  Object {
    "crossLinkText": "BMW с дизельным двигателем",
    "engine": "DIESEL",
    "engineRus": "дизельным",
    "key": "AUDI_DIESEL",
    "params": Object {
      "engine_group": Array [
        "DIESEL",
      ],
    },
    "renderAtFooter": true,
    "value": "DIESEL",
  },
]
`;

exports[`Должен вернуть двигатели из engineTypes для марки BMW и модели 3ER 1`] = `
Array [
  Object {
    "crossLinkText": "BMW 3 серии с бензиновым двигателем",
    "engine": "GASOLINE",
    "engineRus": "бензиновым",
    "key": "AUDI_GASOLINE",
    "params": Object {
      "engine_group": Array [
        "GASOLINE",
      ],
    },
    "renderAtFooter": true,
    "value": "GASOLINE",
  },
  Object {
    "crossLinkText": "BMW 3 серии с дизельным двигателем",
    "engine": "DIESEL",
    "engineRus": "дизельным",
    "key": "AUDI_DIESEL",
    "params": Object {
      "engine_group": Array [
        "DIESEL",
      ],
    },
    "renderAtFooter": true,
    "value": "DIESEL",
  },
]
`;
